--- a/.config/i3/config
+++ b/.config/i3/config
@@ -196,3 +196,6 @@ exec --no-startup-id ~/.config/polybar/i3listen.py
 #exec --no-startup-id nm-applet
 exec --no-startup-id ~/.fehbg &
 exec --no-startup-id wal -R
+exec --no-startup-id compton &
+exec --no-startup-id dunst &
+exec --no-startup-id udiskie &
