--- a/.config/i3/config
+++ b/.config/i3/config
@@ -16,7 +16,8 @@ set $mod Mod4
 font pango:monospace 8
 
 #new window title bar height
-new_window 1pixel
+#new_window 1pixel
+for_window [class="^.*"] border pixel 0
 
 # Set colors from Xresources
 # Change 'color7' and 'color2' to whatever colors you want i3 to use
@@ -184,6 +185,11 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# Gaps between windows
+smart_gaps on
+gaps inner 5
+gaps outer 0
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 # bar {
@@ -198,3 +204,4 @@ exec --no-startup-id compton &
 exec --no-startup-id dunst &
 exec --no-startup-id udiskie &
 exec --no-startup-id sleep 0.4; sh ~/.config/i3/beautify.sh
+exec --no-startup-id unclutter &
