Added compton config file and changed color of the i3lock background. Now the lock screen is a blur of whats on the screen

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -196,12 +196,14 @@ gaps outer 0
 #        status_command i3status
 # }
 
-exec --no-startup-id volumeicon
+exec --no-startup-id volumeicon &
 #exec --no-startup-id nm-applet
 exec --no-startup-id ~/.fehbg &
 exec --no-startup-id wal -R
 exec --no-startup-id compton &
 exec --no-startup-id dunst &
 exec --no-startup-id udiskie &
-exec --no-startup-id sleep 0.4; sh ~/.config/i3/beautify.sh
+exec --no-startup-id sleep 0.4; sh ~/.config/i3/beautify.sh &
 exec --no-startup-id unclutter &
+exec --no-startup-id xss-lock -- i3lock -n -c 000000 &
+exec --no-startup-id xautolock -time 10 -locker i3lock -c 000000 &
