Removed some rules in compton config file that were not needed for the i3lock to be blur

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -1,7 +1,7 @@
 # Opacity
-mark-ovredir-focused = true;
-inactive-opacity = 0.8;
-menu-opacity = 0.9;
+#mark-ovredir-focused = true;
+#inactive-opacity = 0.8;
+#menu-opacity = 0.9;
 
 # WORKS
 opacity-rule = ["80:name *= 'i3lock'"];
