--- a/.config/i3/config
+++ b/.config/i3/config
@@ -205,5 +205,5 @@ exec --no-startup-id dunst &
 exec --no-startup-id udiskie &
 exec --no-startup-id sleep 0.4; sh ~/.config/i3/beautify.sh &
 exec --no-startup-id unclutter &
-exec --no-startup-id xss-lock -- i3lock -n -c 000000 &
-exec --no-startup-id xautolock -time 10 -locker i3lock -c 000000 &
+exec --no-startup-id xss-lock -- betterlockscreen -l dimblur &
+exec --no-startup-id xautolock -time 10 -locker betterlockscreen -l dimblur &
