--- a/.config/i3/config
+++ b/.config/i3/config
@@ -196,14 +196,16 @@ gaps outer 0
 #        status_command i3status
 # }
 
+exec --no-startup-id xrandr --output HDMI-1 --primary --auto --left-of eDP-1
 exec --no-startup-id volumeicon &
 #exec --no-startup-id nm-applet
 exec --no-startup-id ~/.fehbg &
 exec --no-startup-id wal -R
-exec --no-startup-id compton &
+exec --no-startup-id compton -b &
 exec --no-startup-id dunst &
 exec --no-startup-id udiskie &
-exec --no-startup-id sleep 0.4; sh ~/.config/i3/beautify.sh &
+exec --no-startup-id sleep 0.8; sh ~/.config/i3/beautify.sh &
 exec --no-startup-id unclutter &
 exec --no-startup-id xss-lock -- betterlockscreen -l dimblur &
 exec --no-startup-id xautolock -time 10 -locker betterlockscreen -l dimblur &
+exec --no-startup-id ~/.config/i3/bat_envs
