--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -73,6 +73,49 @@
 
 	fixed-center = true
 
+[bar/secondMonitor]
+	override-redirect = false
+	enable-ipc = true
+
+;	dpi      = 192
+	width    = 100%
+	height   = 20
+	offset-x = 0
+	offset-y = 0
+
+	bottom = false
+	monitor = HDMI-1
+	background = ${colors.background}
+	foreground = ${colors.foreground}
+
+	border-bottom-size  = 0
+	border-top-size     = 0
+
+	border-left-size  = 0
+	border-right-size = 0
+
+	border-bottom-color = ${colors.foreground}
+	border-top-color    = ${colors.foreground}
+
+	border-left-color = ${colors.foreground}
+	border-right-color = ${colors.foreground}
+
+	spacing            = 0
+	padding-left       = 0
+	padding-right      = 1
+	module-margin-left = 0
+
+	font-N = <fontconfig pattern>;<vertical offset>
+	font-0 = WunconSiji:size=8;2
+	font-1 = scientifica:pixelsize=10;1
+	font-2 = Kochi Gothic:size=6;1
+
+	modules-left = xwindow
+	modules-center   = workspaces
+	modules-right   = ram cpu battery date
+
+	fixed-center = true
+
 ;--------------------------------------------
 ; modules                                   ;
 ;--------------------------------------------
@@ -109,19 +152,18 @@
 	adapter       = AC0
 	poll-interval = 5
 
-
 	format-charging = <label-charging>
 
 	label-charging            = "C %percentage%%"
 	label-charging-background =  ${colors.background}
-	label-charging-foreground =  ${colors.foreground}
+	;label-charging-foreground =  ${colors.battery_p_bg} 
 	label-charging-padding    = 2
 
 	format-discharging = <label-discharging>
 
 	label-discharging            = "D %percentage%%"
 	label-discharging-background =  ${colors.background}
-	label-discharging-foreground =  ${colors.foreground}
+	label-discharging-foreground =  ${colors.battery_p_bg}
 	label-discharging-padding    = 2
 
 	format-full = <label-full>
@@ -138,11 +180,11 @@
 	format-underline = #f90000
 	label = %percentage:2%%
 
-	format-prefix = 
+	format-prefix = CPU:
 
 	format-prefix-padding    = 1
-	format-prefix-background = ${colors.cpu_p_bg}
-	format-prefix-foreground = ${colors.modules_prefix_fg}
+	;format-prefix-background = ${colors.cpu_p_bg}
+        format-prefix-foreground = ${colors.modules_prefix_fg}
 
 [module/ram]
 	type     = internal/memory
@@ -151,14 +193,14 @@
 	format-underline = #4bffdc
 
 	label            = %percentage_used%%
-	label-background = ${colors.modules_bg}
-	;label-foreground = ${colors.modules_fg}
+;	label-background = ${colors.ram_p_bg}
+;	label-foreground = ${colors.modules_fg}
 	label-padding    = 1
 
-	format-prefix = 
+	format-prefix = RAM:
 
 	format-prefix-padding    = 1
-	format-prefix-background = ${colors.ram_p_bg}
+	;format-prefix-background = ${colors.ram_p_bg}
 	format-prefix-foreground = ${colors.modules_prefix_fg}
 
 
@@ -231,17 +273,17 @@
 	type            = internal/i3
 	format          = <label-state> <label-mode>
 	index-sort      = true
-	wrapping-scroll = false
+	wrapping-scroll = true
 	strip-wsnumbers = true
 
 	label-mode-background =  ${colors.background}
 	label-mode-foreground =  ${colors.foreground}
-	label-mode-padding    = 1
+	label-mode-padding    = 2
 
 	label-focused            = ×
 	label-focused-background =  ${colors.background}
-	label-focused-foreground = ${colors.foreground}
-	label-focused-padding    = 1
+	label-focused-foreground =  ${colors.foreground}
+	label-focused-padding    = 2
 
 	label-unfocused            = •
 	label-unfocused-background =  ${colors.background}
@@ -249,7 +291,7 @@
 	label-unfocused-padding    = 1
 
 	label-visible            = %name%
-	label-visible-background =  ${colors.background}
+	label-visible-background = ${colors.background}
 	label-visible-foreground = ${colors.foreground}
 	label-visible-padding    = 1
 
