--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,346 +1,271 @@
+;=====================================================
+;
+;   To learn more about how to configure Polybar
+;   go to https://github.com/jaagr/polybar
+;
+;   The README contains alot of information
+;
+;=====================================================
+
 [colors]
+background = ${xrdb:color0:#222}
+;background = #222
+background-alt = #444
+;foreground = ${xrdb:color7:#222}
+;foreground = #dfdfdf
+foreground-alt = #555
+primary = #ffb52a
+secondary = #e60053
+alert = #bd2c40
+bg = ${xrdb:color0:#1F2D3A}
+fg = ${xrdb:color7:#2AA198}
+foreground = ${xrdb:color7:#2AA198}
+icon_color = ${xrdb:color12:#2AA198}
+battery_p_bg = ${xrdb:color9}
 
-	background = ${xrdb:color0:#222}
-	background-alt = ${xrdb:color3:#222}
-	foreground = ${xrdb:color7:#222}
-	foreground-alt = ${xrdb:color2:#555}
-	highlight = ${xrdb:color2:#f00}
-	urgent = #f00
+[bar/top]
+;monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR:eDP-1}
+width = 1366
+height = 20
+offset-x = 0
+offset-y = 0
+radius = 0.0
+fixed-center = true
 
-	border_col = ${xrdb:color0}
+background = ${colors.bg}
+foreground = ${colors.fg}
 
-	modules_bg = ${xrdb:color0:#222}
-	modules_fg = ${xrdb:color2:#555}
+line-size = 3
+line-color = #f00
 
-	modules_prefix_fg = ${xrdb:color2:#555}
+border-size = 4
+border-color = #00000000
 
-	urgent_bg  = ${xrdb:color1}
-	focused_bg = ${xrdb:color10}
+padding-left = 0
+padding-right = 2
 
-	essid_p_bg   = ${xrdb:color6}
-	down_p_bg    = #5e606c
-	cpu_p_bg     = ${xrdb:color5}
-	ram_p_bg     = ${xrdb:color11}
-	vol_p_bg     = #637b81
-	bright_p_bg  = #c29f6f
-	battery_p_bg = ${xrdb:color9}
-	time_p_bg    = ${xrdb:color10}
+module-margin-left = 1
+module-margin-right = 1
 
-;--------------------------------------------
-; bars                                      ;
-;--------------------------------------------
+font-0 = ypn envypn:pixelsize=11;2
+font-1 = ypn envypn:fontformat=truetype:size=11:antialias=false;3
+font-2 = ypn envypn:pixelsize=11;2
+font-3 = FontAwesome:size=9;2
+font-4 = Unifont Upper:pixelsize=11;2
+font-5 = symbols:pixelsize=10;2
+font-6 = FuraMono Nerd Font Mono:pixelsize=14;4
+font-7 = Unifont:pixelsize=14;2
 
-[bar/base]
-	override-redirect = false
-	enable-ipc = true
+modules-left = xwindow 
+modules-center = i3
+modules-right = memory cpu temperature battery date
 
-	dpi      = 192
-	width    = 100%
-	height   = 20
-	offset-x = 0
-	offset-y = 0
+;tray-position = center
+;tray-padding = 10
+;tray-transparent = true
+;tray-background = #0063ff
+;tray-offset-x = 10
 
-	bottom = false
-	monitor = eDP-1
-	background = ${colors.background}
-	foreground = ${colors.foreground}
+;wm-restack = bspwm
 
-	border-bottom-size  = 0
-	border-top-size     = 0
+override-redirect = true
 
-	border-left-size  = 0
-	border-right-size = 0
+wm-restack = i3
 
-	border-bottom-color = ${colors.foreground}
-	border-top-color    = ${colors.foreground}
-
-	border-left-color = ${colors.foreground}
-	border-right-color = ${colors.foreground}
-
-	spacing            = 0
-	padding-left       = 0
-	padding-right      = 1
-	module-margin-left = 0
-
-	font-N = <fontconfig pattern>;<vertical offset>
-	font-0 = WunconSiji:size=4;2
-	font-1 = scientifica:pixelsize=10;1
-	font-2 = Kochi Gothic:size=4;1
-
-	modules-left = xwindow
-	modules-center   = workspaces
-	modules-right   = ram cpu battery date
-
-	fixed-center = true
-
-[bar/secondMonitor]
-	override-redirect = false
-	enable-ipc = true
-
-;	dpi      = 192
-	width    = 100%
-	height   = 20
-	offset-x = 0
-	offset-y = 0
-
-	bottom = false
-	monitor = HDMI-1
-	background = ${colors.background}
-	foreground = ${colors.foreground}
-
-	border-bottom-size  = 0
-	border-top-size     = 0
-
-	border-left-size  = 0
-	border-right-size = 0
-
-	border-bottom-color = ${colors.foreground}
-	border-top-color    = ${colors.foreground}
-
-	border-left-color = ${colors.foreground}
-	border-right-color = ${colors.foreground}
-
-	spacing            = 0
-	padding-left       = 0
-	padding-right      = 1
-	module-margin-left = 0
-
-	font-N = <fontconfig pattern>;<vertical offset>
-	font-0 = WunconSiji:size=8;2
-	font-1 = scientifica:pixelsize=10;1
-	font-2 = Kochi Gothic:size=6;1
-
-	modules-left = xwindow
-	modules-center   = workspaces
-	modules-right   = ram cpu battery date
-
-	fixed-center = true
+scroll-up = i3wm-wsprev
+scroll-down = i3wm-wsnext
 
 ;--------------------------------------------
 ; modules                                   ;
 ;--------------------------------------------
 
-[module/network]
-	type          = internal/network
-	interface     = wlp3s0
-	ping-interval = 3
-
 [module/xwindow]
-	y-offset      = 10
-	type          = internal/xwindow
-	format        = <label>
-	label         = %title:0:50:%
-	label-padding = 3
+y-offset      = 10
+type          = internal/xwindow
+format        = <label>
+label         = %title:0:50:%
+label-padding = 2
 
-[module/date]
-	type     = internal/date
-	interval = 1.0
-	time     = "| %A %d %B, %I:%M %p "
-	label    = "%time%"
+[module/battery]	
+type          = internal/battery
+full-at       = 98
+battery       = BAT0
+adapter       = AC0
+poll-interval = 5
 
-	format         = <label>
-	format-padding = 0
+format-charging = <label-charging>
 
-	label-background =  ${colors.background}
-	label-foreground =  ${colors.foreground}
-	label-padding    = 1
+format-charging-prefix = "BAT "
+format-charging-prefix-foreground = ${colors.icon_color}
+label-charging            = "%percentage%%"
+;label-charging-background =  ${colors.background}
+;label-charging-foreground =  ${colors.icon_color}
+;label-charging-padding    = 0
 
-[module/battery]
-	type          = internal/battery
-	full-at       = 98
-	battery       = BAT0
-	adapter       = AC0
-	poll-interval = 5
+format-discharging = <label-discharging>
 
-	format-charging = <label-charging>
+format-discharging-prefix = "BAT "
+format-discharging-prefix-foreground = ${colors.battery_p_bg}
+label-discharging            = "%percentage%%"
+label-discharging-background =  ${colors.background}
+;label-discharging-foreground =  ${colors.battery_p_bg}
+;label-discharging-padding    = 0
 
-	label-charging            = "C %percentage%%"
-	label-charging-background =  ${colors.background}
-	;label-charging-foreground =  ${colors.battery_p_bg} 
-	label-charging-padding    = 2
+format-full = <label-full>
 
-	format-discharging = <label-discharging>
+label-full-prefix     = "BAT "
+label-full            = "%percentage%%"
+label-full-background =  ${colors.background}
+label-full-foreground =  ${colors.foreground}
+;label-full-padding    = 0
 
-	label-discharging            = "D %percentage%%"
-	label-discharging-background =  ${colors.background}
-	label-discharging-foreground =  ${colors.battery_p_bg}
-	label-discharging-padding    = 2
+[module/filesystem]
+type = internal/fs
+interval = 25
 
-	format-full = <label-full>
+mount-0 = /
 
-	label-full            = "F %percentage%%"
-	label-full-background =  ${colors.background}
-	label-full-foreground =  ${colors.foreground}
-	label-full-padding    = 2
+#label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
+label-mounted = root: %used%/%total%
+label-unmounted = %mountpoint% not mounted
+label-unmounted-foreground = ${colors.foreground-alt}
+
+[module/bspwm]
+type = internal/bspwm
+
+label-focused = %index%
+label-focused-background = ${colors.background-alt}
+label-focused-underline= ${colors.primary}
+label-focused-padding = 2
+
+label-occupied = %index%
+label-occupied-padding = 2
+
+label-urgent = %index%!
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 2
+
+label-empty = %index%
+label-empty-foreground = ${colors.foreground-alt}
+label-empty-padding = 2
+
+[module/i3]
+
+type = internal/i3
+format = <label-state> <label-mode>
+index-sort = true
+wrapping-scroll = false
+
+; Only show workspaces on the same output as the bar
+pin-workspaces = true
+
+label-mode-padding = 2
+label-mode-foreground = #000
+label-mode-background = ${colors.primary}
+
+;ws-icon-0 = 1;
+;ws-icon-1 = 2;
+;ws-icon-2 = 3;
+;ws-icon-3 = 4;
+;ws-icon-4 = 5;
+;ws-icon-5 = 6;;
+;ws-icon-default =  
+
+; focused = Active workspace on focused monitor
+;label-focused = %icon%
+label-focused-foreground = ${colors.icon_color}
+label-focused-background = ${colors.bg}
+label-focused-underline = ${colors.bg}
+label-focused-padding = 1.5
+;${module/bspwm.label-focused-padding}
+
+; unfocused = Inactive workspace on any monitor
+;label-unfocused = %icon%
+label-unfocused-padding = 1.5
+;${module/bspwm.label-occupied-padding}
+
+; visible = Active workspace on unfocused monitor
+;label-visible = %icon%
+label-visible-foreground = ${colors.icon_color}
+label-visible-background = ${colors.bg}
+label-visible-underline = ${colors.bg}
+label-visible-padding = 1.5
+;${self.label-focused-padding}
+
+; urgent = Workspace with urgency hint set
+label-urgent = %icon%
+label-urgent-background = ${module/bspwm.label-urgent-background}
+label-urgent-padding = 1.5
+;${module/bspwm.label-urgent-padding}
 
 [module/cpu]
-	type = internal/cpu
-	format           = <label>
-	interval = 2
-	format-underline = #f90000
-	label = %percentage:2%%
+type = internal/cpu
+interval = 2
+format-prefix = "CPU "
+format-prefix-foreground = ${colors.icon_color}
+;format-underline = #f90000
+label = %percentage%%
 
-	format-prefix = CPU:
+[module/memory]
+type = internal/memory
+interval = 2
+format-prefix = "RAM "
+format-prefix-foreground = ${colors.icon_color}
+;format-underline = #4bffdc
+label = %gb_used% 
 
-	format-prefix-padding    = 1
-	;format-prefix-background = ${colors.cpu_p_bg}
-        format-prefix-foreground = ${colors.modules_prefix_fg}
+[module/date]
+type = internal/date
+interval = 1
 
-[module/ram]
-	type     = internal/memory
-	format           = <label>
-	interval = 3
-	format-underline = #4bffdc
+date = %a
+date-alt = "%m/%d/%Y"
 
-	label            = %percentage_used%%
-;	label-background = ${colors.ram_p_bg}
-;	label-foreground = ${colors.modules_fg}
-	label-padding    = 1
+time = %I:%M %p
+time-alt = %I:%M:%S %p
 
-	format-prefix = RAM:
+format-prefix = "| "
+format-prefix-foreground = ${colors.fg}
+;format-underline = #0a6cf5
 
-	format-prefix-padding    = 1
-	;format-prefix-background = ${colors.ram_p_bg}
-	format-prefix-foreground = ${colors.modules_prefix_fg}
+format = <label>
+format-foreground = ${colors.fg}
+label = %date% %time%
+label-font = 0
 
+[module/temperature]
+type = internal/temperature
+thermal-zone = 0
+warn-temperature = 60
 
-[module/essid]
-	inherit = module/network
+format = <ramp> <label>
+;format-underline = #f50a4d
+format-warn = <ramp> <label-warn>
+;format-warn-underline = ${self.format-underline}
 
-	format-connected = <label-connected>
+format-prefix = TEMP
+format-prefix-foreground = ${colors.icon_color}
+label = %temperature-c%
+label-warn = %temperature-c%
+label-warn-foreground = ${colors.secondary}
 
-	format-connected-prefix              = ""
-	format-connected-prefix-padding      = 1
-	format-connected-prefix-padding-left = 1
-	format-connected-prefix-background   = ${xrdb:color0}
-	format-connected-prefix-foreground   = ${xrdb:color5}
-
-	label-connected               = "%essid%"
-	label-connected-background    = ${xrdb:color0}
-	label-connected-foreground    = ${xrdb:color5}
-	label-connected-padding       = 1
-	label-connected-padding-right = 1
-
-	ramp-signal-background    = ${xrdb:color0}
-	ramp-signal-foreground    = ${xrdb:color5}
-	ramp-connected-foreground = ${xrdb:color5}
-	ramp-signal-padding       = 1
-
-	format-disconnected = <label-disconnected>
-
-	format-disconnected-prefix              = ""
-	format-disconnected-prefix-padding      = 1
-	format-disconnected-prefix-padding-left = 1
-	format-disconnected-prefix-background   = ${xrdb:color0}
-	format-disconnected-prefix-foreground   = ${xrdb:color7}
-
-	label-disconnected               = "DISCONNECTED"
-	label-disconnected-background    = ${xrdb:color0}
-	label-disconnected-foreground    = ${xrdb:color7}
-	label-disconnected-padding       = 1
-	label-disconnected-padding-right = 1
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-foreground = ${colors.foreground-alt}
 
 
-[module/down]
-	inherit = module/network
-
-	format-connected = <label-connected>
-
-	format-connected-prefix            = 
-	format-connected-prefix-background = ${colors.down_p_bg}
-	format-connected-prefix-foreground = ${colors.modules_prefix_fg}
-	format-connected-prefix-padding    = 1
-
-	label-connected               = %{T2}%downspeed:7%%{T-}
-	label-connected-background    = ${colors.modules_bg}
-	label-connected-foreground    = ${colors.modules_fg}
-	label-connected-padding-right = 1
-
-[module/padding]
-	type               = custom/text
-	content            = |
-	content-foreground = ${colors.bg}
-	content-background = ${colors.bg}
-
-[module/paddinglite]
-	type               = custom/text
-	content            = ||
-	content-foreground = ${colors.foreground}
-	content-background = ${colors.background}
-
-[module/workspaces]
-
-	type            = internal/i3
-	format          = <label-state> <label-mode>
-	index-sort      = true
-	wrapping-scroll = true
-	strip-wsnumbers = true
-
-	label-mode-background =  ${colors.background}
-	label-mode-foreground =  ${colors.foreground}
-	label-mode-padding    = 2
-
-	label-focused            = ×
-	label-focused-background =  ${colors.background}
-	label-focused-foreground =  ${colors.foreground}
-	label-focused-padding    = 2
-
-	label-unfocused            = •
-	label-unfocused-background =  ${colors.background}
-	label-unfocused-foreground = ${colors.foreground}
-	label-unfocused-padding    = 1
-
-	label-visible            = %name%
-	label-visible-background = ${colors.background}
-	label-visible-foreground = ${colors.foreground}
-	label-visible-padding    = 1
-
-	label-urgent            = •
-	label-urgent-background = ${colors.background}
-	label-urgent-foreground = ${colors.foreground}
-	label-urgent-padding    = 1
+[settings]
+screenchange-reload = true
+;compositing-background = xor
+;compositing-background = screen
+;compositing-foreground = source
+;compositing-border = over
 
 
-[module/openbox]
-	type                      = internal/xworkspaces
-	pin-workspaces            = true
-	enable-click              = false
-	enable-scroll             = false
-	format                    = <label-state>
-	label-monitor             = %name%
-	label-active              = %icon%%name%
-	label-active-foreground   = ${colors.foreground}
-	label-active-background   = ${colors.background}
-	label-active-underline    = ${colors.foreground-alt}
-	label-active-padding      = 1
-	label-occupied            = %name%
-	label-occupied-background = ${colors.obbg}
-	label-occupied-padding    = 1
-	label-urgent              = %index%
-	label-urgent-foreground   = ${colors.foreground}
-	label-urgent-background   = ${colors.background}
-	label-urgent-underline    = ${colors.urgent}
-	label-empty               = %name%
-	label-empty-padding       = 1
-	label-empty-background    = ${colors.background-alt}
-	label-empty-foreground    = ${colors.foreground-alt}
+[global/wm]
+margin-top = 500
+margin-bottom = 0
 
-[module/backlight]
-	type = internal/backlight
-
-	output = LVDS-1
-
-	card          = acpi_video0
-	enable-scroll = false
-
-	format        = <label>
-	format-prefix = 
-
-	format-prefix-padding    = 1
-	format-prefix-background = ${colors.cpu_p_bg}
-	format-prefix-foreground = ${colors.modules_prefix_fg}
-
-	label            = %percentage%%
-	label-background = ${colors.modules_bg}
-	label-foreground = ${colors.modules_fg}
-	label-padding    = 1
+; vim:ft=dosini
