--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -13,9 +13,10 @@ glx-no-rebind-pixmap = true;     # Improves performance with rapid window change
 #--------Shadow Settings:--------
 #--------------------------------
 shadow = true;                   # Enable drawing shadows on windows
-shadow-radius = 8;               # The blur radius for shadows
-shadow-offset-x = -8;            # The horizontal offset for shadows
-shadow-offset-y = -8;            # The vertical offset for shadows
+shadow-radius = 5;               # The blur radius for shadows
+shadow-offset-x = -2;            # The horizontal offset for shadows
+shadow-offset-y = -2;            # The vertical offset for shadows
+shadow-opacity = 0.8;
 clear-shadow = true;             # Zero the part of the shadow's mask behind the window, may break some applications
 no-dock-shadow = true;           # Do not draw shadows on docks/panels
 no-dnd-shadow = true;            # Do not draw shadows on DND windows
