--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,7 +17,7 @@ font pango:monospace 8
 
 #new window title bar height
 #new_window 1pixel
-for_window [class="^.*"] border pixel 0
+for_window [class="^.*"] border pixel 1
 
 # Set colors from Xresources
 # Change 'color7' and 'color2' to whatever colors you want i3 to use
@@ -57,7 +57,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -show run
+bindsym $mod+d exec --no-startup-id rofi -show drun -modi drun
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -196,9 +196,14 @@ gaps outer 0
 #        status_command i3status
 # }
 
+# screen capture using scrot
+bindsym --release $mod+Shift+P exec --no-startup-id escrotum -e 'mv $f /home/giuseppe/Pictures/screenshots/'
+
+bindsym $mod+C exec --no-startup-id caja
+
 exec --no-startup-id xrandr --output HDMI-1 --primary --auto --left-of eDP-1
 exec --no-startup-id volumeicon &
-#exec --no-startup-id nm-applet
+exec --no-startup-id nm-applet
 exec --no-startup-id ~/.fehbg &
 exec --no-startup-id wal -R
 exec --no-startup-id compton -b &
@@ -208,4 +213,3 @@ exec --no-startup-id sleep 0.8; sh ~/.config/i3/beautify.sh &
 exec --no-startup-id unclutter &
 exec --no-startup-id xss-lock -- betterlockscreen -l dimblur &
 exec --no-startup-id xautolock -time 10 -locker betterlockscreen -l dimblur &
-exec --no-startup-id ~/.config/i3/bat_envs
