--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -48,14 +48,7 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = ypn envypn:pixelsize=11;2
-font-1 = ypn envypn:fontformat=truetype:size=11:antialias=false;3
-font-2 = ypn envypn:pixelsize=11;2
-font-3 = FontAwesome:size=9;2
-font-4 = Unifont Upper:pixelsize=11;2
-font-5 = symbols:pixelsize=10;2
-font-6 = FuraMono Nerd Font Mono:pixelsize=14;4
-font-7 = Unifont:pixelsize=14;2
+font-0 = Hack:pixelsize=9:weight:bold;2
 
 modules-left = xwindow 
 modules-center = i3
